--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-
+    <!-- Page 1 Login -->
+    <!-- Page 2 Count down -->
+    <!-- Page 3 Album -->
+    <!-- Page 4 Messeage -->
+    <!-- Page 5 Candle Animation -->
+    <!-- Page 6 Thanks & contact -->
 </body>
 
 </html>
