time count test

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matutu Birthday❤️</title>
     <link rel="stylesheet" href="./src/output.css">
+    <script src="./src/script.js" defer></script>
 </head>
 
 <body class="flex items-center justify-center min-h-screen">
@@ -25,13 +26,22 @@
         <h1 class="text-lg font-semibold text-gray-800 mb-4">Berapa lama yaa adek sudah lahir menghiasi dunia dengan
             imut??? 🤔</h1>
         <div class="text-4xl font-bold text-blue-600 mb-4">
-            <span id="tahun">0</span> tahun
-            <span id="bulan">00</span>:<span id="hari">00</span>:<span id="jam">00</span>:<span
-                id="menit">00</span>:<span id="detik">00</span>
+            <div id="timer-screen" class="hidden">
+                <span id="years"></span> tahun
+                <span id="months"></span> bulan
+                <span id="days"></span> hari
+                <span id="hours"></span>:
+                <span id="minutes"></span>:
+                <span id="seconds"></span>
+            </div>
         </div>
         <p class="text-sm text-gray-600">Wahhh adek sudah lama memberi keiimutan di dunia ini😉</p>
     </div>
+
     <!-- Page 3 Album -->
+    <div class="bg-blue-600">
+
+    </div>
     <!-- Page 4 Messeage -->
     <!-- Page 5 Candle Animation -->
     <!-- Page 6 Thanks & contact -->
