--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,42 +9,102 @@
     <script src="./src/script.js" defer></script>
 </head>
 
-<body class="flex items-center justify-center min-h-screen">
-    <!-- Page 1 Login -->
-    <div id="passcode-screen" class="p-6 rounded-lg shadow-lg">
-        <h1 class="text-lg font-semibold text-gray-800 mb-4">Kapan Anak Cantik Ultah Ya???</h1>
-        <input id="passcode-input" type="password"
-            class="border border-gray-300 rounded-lg p-2 - w-full focus:outline-none focus:ring-2 focus:ring-blue-500 mb-4"
-            placeholder="Kapan Anak Imut Ultah Yaa???">
-        <button onclick="checkPasscode()"
-            class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 w-full">Coba Yaa???</button>
-        <p id="error-messeage" class="text-red-500 text-sm mt-2 hidden">Hayooo Salahhh, Coba Lagi Ya???</p>
-    </div>
+<body> -->
+<!DOCTYPE html>
+<html lang="en">
 
-    <!-- Page 2 Count down -->
-    <div id="timer-screen" class="hidden bg-white p-6 rounded-lg shadow-lg text-center">
-        <h1 class="text-lg font-semibold text-gray-800 mb-4">Berapa lama yaa adek sudah lahir menghiasi dunia dengan
-            imut??? 🤔</h1>
-        <div class="text-4xl font-bold text-blue-600 mb-4">
-            <div id="timer-screen" class="hidden">
-                <span id="years"></span> tahun
-                <span id="months"></span> bulan
-                <span id="days"></span> hari
-                <span id="hours"></span>:
-                <span id="minutes"></span>:
-                <span id="seconds"></span>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Birthday Website</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
+<body class="bg-pink-100 font-sans">
+
+    <!-- Section 1: Hero -->
+    <section class="bg-pink-300 text-white h-screen flex flex-col justify-center items-center">
+        <h1 class="text-5xl font-bold mb-4">Welcome to Your Birthday Celebration!</h1>
+        <p class="text-xl">Make your special day unforgettable with us.</p>
+        <button class="mt-6 px-6 py-3 bg-white text-pink-500 font-semibold rounded">Learn More</button>
+    </section>
+
+    <!-- Section 2: About -->
+    <section class="h-screen flex flex-col justify-center items-center bg-white">
+        <div class="max-w-6xl mx-auto px-6 text-center">
+            <h2 class="text-4xl font-bold text-pink-500 mb-6">About Us</h2>
+            <p class="text-lg text-gray-700">We specialize in creating magical birthday celebrations tailored to your
+                needs. From decorations to entertainment, we handle it all!</p>
+        </div>
+    </section>
+
+    <!-- Section 3: Services -->
+    <section class="h-screen flex flex-col justify-center bg-blue-100">
+        <div class="max-w-6xl mx-auto px-6">
+            <h2 class="text-4xl font-bold text-center text-blue-500 mb-8">Our Services</h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div class="bg-white p-6 rounded-lg shadow-md text-center">
+                    <h3 class="text-2xl font-semibold text-blue-500 mb-4">Custom Decor</h3>
+                    <p class="text-gray-700">Beautiful and personalized decorations to match your theme.</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md text-center">
+                    <h3 class="text-2xl font-semibold text-blue-500 mb-4">Entertainment</h3>
+                    <p class="text-gray-700">Live performances, games, and activities for all ages.</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md text-center">
+                    <h3 class="text-2xl font-semibold text-blue-500 mb-4">Catering</h3>
+                    <p class="text-gray-700">Delicious food options to satisfy every guest.</p>
+                </div>
             </div>
         </div>
-        <p class="text-sm text-gray-600">Wahhh adek sudah lama memberi keiimutan di dunia ini😉</p>
-    </div>
+    </section>
 
-    <!-- Page 3 Album -->
-    <div class="bg-blue-600">
+    <!-- Section 4: Gallery -->
+    <section class="h-screen flex flex-col justify-center bg-white">
+        <div class="max-w-6xl mx-auto px-6">
+            <h2 class="text-4xl font-bold text-center text-pink-500 mb-8">Gallery</h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                <div class="bg-gray-200 h-48 rounded"></div>
+                <div class="bg-gray-200 h-48 rounded"></div>
+                <div class="bg-gray-200 h-48 rounded"></div>
+                <div class="bg-gray-200 h-48 rounded"></div>
+                <div class="bg-gray-200 h-48 rounded"></div>
+                <div class="bg-gray-200 h-48 rounded"></div>
+            </div>
+        </div>
+    </section>
 
-    </div>
-    <!-- Page 4 Messeage -->
-    <!-- Page 5 Candle Animation -->
-    <!-- Page 6 Thanks & contact -->
+    <!-- Section 5: Testimonials -->
+    <section class="h-screen flex flex-col justify-center bg-blue-100">
+        <div class="max-w-6xl mx-auto px-6 text-center">
+            <h2 class="text-4xl font-bold text-blue-500 mb-8">What Our Clients Say</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="bg-white p-6 rounded-lg shadow-md">
+                    <p class="text-gray-700 italic">"It was the best birthday party ever! The decorations were stunning
+                        and the entertainment was amazing."</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md">
+                    <p class="text-gray-700 italic">"The team made everything so easy and stress-free. Highly
+                        recommend!"</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Section 6: Contact -->
+    <section class="h-screen flex flex-col justify-center bg-white">
+        <div class="max-w-6xl mx-auto px-6 text-center">
+            <h2 class="text-4xl font-bold text-pink-500 mb-6">Get in Touch</h2>
+            <p class="text-lg text-gray-700 mb-8">Ready to plan your dream birthday party? Contact us today!</p>
+            <form class="max-w-xl mx-auto">
+                <input type="text" placeholder="Your Name" class="w-full mb-4 p-3 border rounded">
+                <input type="email" placeholder="Your Email" class="w-full mb-4 p-3 border rounded">
+                <textarea placeholder="Your Message" class="w-full mb-4 p-3 border rounded h-32"></textarea>
+                <button class="px-6 py-3 bg-pink-500 text-white font-semibold rounded">Send Message</button>
+            </form>
+        </div>
+    </section>
+
 </body>
 
 </html>
