--- a/index.html
+++ b/index.html
@@ -1,35 +1,23 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matutu Birthday❤️</title>
-    <link rel="stylesheet" href="./src/output.css">
-    <script src="./src/script.js" defer></script>
-</head>
-
-<body> -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Birthday Website</title>
+    <title>Matutu Birthday❤️</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="bg-pink-100 font-sans">
 
-    <!-- Section 1: Hero -->
+    <!-- Section 1: Passcode -->
     <section class="bg-pink-300 text-white h-screen flex flex-col justify-center items-center">
         <h1 class="text-5xl font-bold mb-4">Welcome to Your Birthday Celebration!</h1>
         <p class="text-xl">Make your special day unforgettable with us.</p>
         <button class="mt-6 px-6 py-3 bg-white text-pink-500 font-semibold rounded">Learn More</button>
     </section>
 
-    <!-- Section 2: About -->
+    <!-- Section 2: Timer Count -->
     <section class="h-screen flex flex-col justify-center items-center bg-white">
         <div class="max-w-6xl mx-auto px-6 text-center">
             <h2 class="text-4xl font-bold text-pink-500 mb-6">About Us</h2>
@@ -38,7 +26,7 @@
         </div>
     </section>
 
-    <!-- Section 3: Services -->
+    <!-- Section 3: Greating -->
     <section class="h-screen flex flex-col justify-center bg-blue-100">
         <div class="max-w-6xl mx-auto px-6">
             <h2 class="text-4xl font-bold text-center text-blue-500 mb-8">Our Services</h2>
@@ -59,7 +47,7 @@
         </div>
     </section>
 
-    <!-- Section 4: Gallery -->
+    <!-- Section 4: Photo album -->
     <section class="h-screen flex flex-col justify-center bg-white">
         <div class="max-w-6xl mx-auto px-6">
             <h2 class="text-4xl font-bold text-center text-pink-500 mb-8">Gallery</h2>
@@ -74,7 +62,7 @@
         </div>
     </section>
 
-    <!-- Section 5: Testimonials -->
+    <!-- Section 5: Wish Candle n Flower -->
     <section class="h-screen flex flex-col justify-center bg-blue-100">
         <div class="max-w-6xl mx-auto px-6 text-center">
             <h2 class="text-4xl font-bold text-blue-500 mb-8">What Our Clients Say</h2>
@@ -91,7 +79,7 @@
         </div>
     </section>
 
-    <!-- Section 6: Contact -->
+    <!-- Section 6: Thanks n Contact -->
     <section class="h-screen flex flex-col justify-center bg-white">
         <div class="max-w-6xl mx-auto px-6 text-center">
             <h2 class="text-4xl font-bold text-pink-500 mb-6">Get in Touch</h2>
