time count done

--- a/index.html
+++ b/index.html
@@ -3,26 +3,36 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="x-icon" href="./src/img/icon_cake.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matutu Birthday❤️</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="/src/script.js"></script>
 </head>
 
 <body class="bg-pink-100 font-sans">
 
     <!-- Section 1: Passcode -->
     <section class="bg-pink-300 text-white h-screen flex flex-col justify-center items-center">
-        <h1 class="text-5xl font-bold mb-4">Welcome to Your Birthday Celebration!</h1>
-        <p class="text-xl">Make your special day unforgettable with us.</p>
-        <button class="mt-6 px-6 py-3 bg-white text-pink-500 font-semibold rounded">Learn More</button>
+        <h1 class="text-5xl font-bold mb-4">Hallo Adek cantikkk!!! 😊</h1>
+        <p class="text-xl">Sebelum melihat lebih dalam, yokk isi password dulu (huuu gaya ada password)</p>
+        <button class="mt-6 px-6 py-3 bg-white text-pink-500 font-semibold rounded">DI SINI NANTI JADI TEMPAT
+            PASSCODE</button>
     </section>
 
     <!-- Section 2: Timer Count -->
     <section class="h-screen flex flex-col justify-center items-center bg-white">
         <div class="max-w-6xl mx-auto px-6 text-center">
-            <h2 class="text-4xl font-bold text-pink-500 mb-6">About Us</h2>
-            <p class="text-lg text-gray-700">We specialize in creating magical birthday celebrations tailored to your
-                needs. From decorations to entertainment, we handle it all!</p>
+            <h2 class="text-4xl font-bold text-pink-500 mb-6">Time Since Start</h2>
+            <p class="text-lg text-gray-700 mb-8">Time elapsed since January 1, 2023:</p>
+            <div class="text-2xl font-semibold">
+                <span id="years" class="text-pink-500">0</span> years,
+                <span id="months" class="text-purple-500">0</span> months,
+                <span id="days" class="text-red-500">0</span> days,
+                <span id="hours" class="text-blue-500">0</span> hours,
+                <span id="minutes" class="text-green-500">0</span> minutes,
+                <span id="seconds" class="text-yellow-500">0</span> seconds
+            </div>
         </div>
     </section>
 
@@ -63,7 +73,7 @@
     </section>
 
     <!-- Section 5: Wish Candle n Flower -->
-    <section class="h-screen flex flex-col justify-center bg-blue-100">
+    <section class="h-screen flex flex-col justify-center bg-pink-300">
         <div class="max-w-6xl mx-auto px-6 text-center">
             <h2 class="text-4xl font-bold text-blue-500 mb-8">What Our Clients Say</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
@@ -80,7 +90,7 @@
     </section>
 
     <!-- Section 6: Thanks n Contact -->
-    <section class="h-screen flex flex-col justify-center bg-white">
+    <section class="h-screen flex flex-col justify-center bg-blue-100">
         <div class="max-w-6xl mx-auto px-6 text-center">
             <h2 class="text-4xl font-bold text-pink-500 mb-6">Get in Touch</h2>
             <p class="text-lg text-gray-700 mb-8">Ready to plan your dream birthday party? Contact us today!</p>
