--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 
     <!-- Section 2: Timer Count -->
     <section class="h-screen flex flex-col justify-center items-center bg-white">
-        <div class="max-w-6xl mx-auto px-6 text-center">
-            <h2 class="text-4xl font-bold text-pink-500 mb-6">Time Since Start</h2>
-            <p class="text-lg text-gray-700 mb-8">Time elapsed since January 1, 2023:</p>
-            <div class="text-2xl font-semibold">
-                <span id="years" class="text-pink-500">0</span> years,
-                <span id="months" class="text-purple-500">0</span> months,
-                <span id="days" class="text-red-500">0</span> days,
-                <span id="hours" class="text-blue-500">0</span> hours,
-                <span id="minutes" class="text-green-500">0</span> minutes,
-                <span id="seconds" class="text-yellow-500">0</span> seconds
+        <div class="max-w-6xl mx-auto px-12 text-center">
+            <h2 class="text-6xl font-bold text-pink-500 mb-6">Hemm... 🤔 Usia adek hari ini berapa ya???</h2>
+            <div class="text-4xl font-semibold mb-6">
+                <span id="years" class="text-pink-500">0</span> tahun,
+                <span id="months" class="text-purple-500">0</span> bulan,
+                <span id="days" class="text-red-500">0</span> hari,
+                <span id="hours" class="text-blue-500">0</span> jam,
+                <span id="minutes" class="text-green-500">0</span> menit,
+                <span id="seconds" class="text-yellow-500">0</span> detik
             </div>
+            <!-- <p class="text-lg text-gray-700 mt-8">Woww Adek udah dewasa!!!</p> -->
         </div>
     </section>
 
