--- a/index.html
+++ b/index.html
@@ -60,14 +60,26 @@
     <!-- Section 4: Photo album -->
     <section class="h-screen flex flex-col justify-center bg-white">
         <div class="max-w-6xl mx-auto px-6">
-            <h2 class="text-4xl font-bold text-center text-pink-500 mb-8">Gallery</h2>
+            <h2 class="text-4xl font-bold text-center text-pink-500 mb-8">Matutu's Life Story 🗺️</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                <div class="bg-gray-200 h-48 rounded"></div>
-                <div class="bg-gray-200 h-48 rounded"></div>
-                <div class="bg-gray-200 h-48 rounded"></div>
-                <div class="bg-gray-200 h-48 rounded"></div>
-                <div class="bg-gray-200 h-48 rounded"></div>
-                <div class="bg-gray-200 h-48 rounded"></div>
+                <div class="bg-gray-200 h-48 rounded">
+                    <img src="./src/img/icon_cake.svg" alt="">
+                </div>
+                <div class="bg-gray-200 h-48 rounded">
+                    <img src="./src/img/icon_cake.svg" alt="">
+                </div>
+                <div class="bg-gray-200 h-48 rounded">
+                    <img src="./src/img/icon_cake.svg" alt="">
+                </div>
+                <div class="bg-gray-200 h-48 rounded">
+                    <img src="./src/img/icon_cake.svg" alt="">
+                </div>
+                <div class="bg-gray-200 h-48 rounded">
+                    <img src="./src/img/icon_cake.svg" alt="">
+                </div>
+                <div class="bg-gray-200 h-48 rounded">
+                    <img src="./src/img/icon_cake.svg" alt="">
+                </div>
             </div>
         </div>
     </section>
