--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matutu Birthday❤️</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/src/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="/src/script.js" defer></script>
 </head>
 
 <body class="bg-pink-100 font-sans">
@@ -85,20 +86,8 @@
     </section>
 
     <!-- Section 5: Wish Candle n Flower -->
-    <section class="h-screen flex flex-col justify-center bg-pink-300">
-        <div class="max-w-6xl mx-auto px-6 text-center">
-            <h2 class="text-4xl font-bold text-blue-500 mb-8">What Our Clients Say</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <p class="text-gray-700 italic">"It was the best birthday party ever! The decorations were stunning
-                        and the entertainment was amazing."</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <p class="text-gray-700 italic">"The team made everything so easy and stress-free. Highly
-                        recommend!"</p>
-                </div>
-            </div>
-        </div>
+    <section class="bg-[#1e1934] flex items-center justify-center min-h-screen text-white font-sans">
+        <h1 class="font-bold text-8xl">LILIN PINDAH KE PAGE LAIN</h1>
     </section>
 
     <!-- Section 6: Thanks n Contact -->
