time count update

--- a/index.html
+++ b/index.html
@@ -22,18 +22,28 @@
     </section>
 
     <!-- Section 2: Timer Count -->
-    <section class="h-screen flex flex-col justify-center items-center bg-white">
-        <div class="max-w-6xl mx-auto px-12 text-center">
-            <h2 class="text-6xl font-bold text-pink-500 mb-6">Hemm... 🤔 Usia adek hari ini berapa ya???</h2>
-            <div class="text-4xl font-semibold mb-6">
-                <span id="years" class="text-pink-500">0</span> tahun,
-                <span id="months" class="text-purple-500">0</span> bulan,
-                <span id="days" class="text-red-500">0</span> hari,
-                <span id="hours" class="text-blue-500">0</span> jam,
-                <span id="minutes" class="text-green-500">0</span> menit,
-                <span id="seconds" class="text-yellow-500">0</span> detik
+    <section class="h-screen flex justify-center items-center bg-gradient-to-r from-pink-100 via-white to-blue-100">
+        <div
+            class="max-w-6xl mx-auto flex flex-col lg:flex-row items-center space-y-8 lg:space-y-0 lg:space-x-12 p-6 lg:p-12 rounded-xl shadow-xl border-2 bg-white">
+            <div class="w-full lg:w-1/2 flex justify-center items-center">
+                <img src="/src/img/timecount.JPG" alt="Foto Adek"
+                    class="rounded-xl shadow-lg max-w-sm md:max-w-md lg:max-w-lg border-4">
             </div>
-            <!-- <p class="text-lg text-gray-700 mt-8">Woww Adek udah dewasa!!!</p> -->
+
+            <!-- Time Count -->
+            <div class="w-full lg:w-1/2 text-center lg:text-left">
+                <h2 class="text-4xl md:text-5xl lg:text-6xl font-bold text-pink-500 mb-6">
+                    Hemm... 🤔 Usia adek hari ini berapa ya???
+                </h2>
+                <p class="text-xl md:text-2xl lg:text-3xl font-semibold leading-relaxed">
+                    <span id="years" class="text-pink-500">0</span> tahun,
+                    <span id="months" class="text-purple-500">0</span> bulan,
+                    <span id="days" class="text-red-500">0</span> hari,
+                    <span id="hours" class="text-blue-500">0</span> jam,
+                    <span id="minutes" class="text-green-500">0</span> menit,
+                    <span id="seconds" class="text-yellow-500">0</span> detik
+                </p>
+            </div>
         </div>
     </section>
 
