--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
 
     <!-- Section 2: Timer Count -->
-    <section class="h-screen flex justify-center items-center bg-gradient-to-r from-pink-100 via-white to-blue-100">
+    <section class="h-screen flex justify-center items-center bg-gradient-to-b from-pink-300 via-white to-blue-100">
         <div
             class="max-w-6xl mx-auto flex flex-col lg:flex-row items-center space-y-8 lg:space-y-0 lg:space-x-12 p-6 lg:p-12 rounded-xl shadow-xl border-2 bg-white">
             <div class="w-full lg:w-1/2 flex justify-center items-center">
@@ -69,7 +69,7 @@
     </section>
 
     <!-- Section 4: Photo album -->
-    <section class="h-screen flex flex-col justify-center bg-white">
+    <section class="h-screen flex flex-col justify-center bg-gradient-to-t from-pink-300 via-white to-blue-100">
         <div class="max-w-6xl mx-auto px-6">
             <h2 class="text-4xl font-bold text-center text-pink-500 mb-8">Matutu's Life Story 🗺️</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
@@ -96,12 +96,12 @@
     </section>
 
     <!-- Section 5: Wish Candle n Flower -->
-    <section class="bg-[#1e1934] flex items-center justify-center min-h-screen text-white font-sans">
+    <section class="flex items-center justify-center min-h-screen bg-pink-300 font-sans">
         <h1 class="font-bold text-8xl">LILIN PINDAH KE PAGE LAIN</h1>
     </section>
 
     <!-- Section 6: Thanks n Contact -->
-    <section class="h-screen flex flex-col justify-center bg-blue-100">
+    <section class="h-screen flex flex-col justify-center bg-gradient-to-b from-pink-300 via-white to-blue-200">
         <div class="max-w-6xl mx-auto px-6 text-center">
             <h2 class="text-4xl font-bold text-pink-500 mb-6">Get in Touch</h2>
             <p class="text-lg text-gray-700 mb-8">Ready to plan your dream birthday party? Contact us today!</p>
