--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <!-- Section 1: Passcode -->
     <section class="bg-pink-300 text-white h-screen flex flex-col justify-center items-center">
+        <img src="./src/img/balloons (1).png" alt="balon 1" class="">
+        <img src="./src/img/balloons.png" alt="balon 2">
         <h1 class="text-5xl font-bold mb-4">Hallo Adek cantikkk!!! 😊</h1>
         <p class="text-xl">Sebelum melihat lebih dalam, yokk isi password dulu (huuu gaya ada password)</p>
         <button class="mt-6 px-6 py-3 bg-white text-pink-500 font-semibold rounded">DI SINI NANTI JADI TEMPAT
@@ -72,26 +74,8 @@
     <section class="h-screen flex flex-col justify-center bg-gradient-to-t from-pink-300 via-white to-blue-100">
         <div class="max-w-6xl mx-auto px-6">
             <h2 class="text-4xl font-bold text-center text-pink-500 mb-8">Matutu's Life Story 🗺️</h2>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                <div class="bg-gray-200 h-48 rounded">
-                    <img src="./src/img/icon_cake.svg" alt="">
-                </div>
-                <div class="bg-gray-200 h-48 rounded">
-                    <img src="./src/img/icon_cake.svg" alt="">
-                </div>
-                <div class="bg-gray-200 h-48 rounded">
-                    <img src="./src/img/icon_cake.svg" alt="">
-                </div>
-                <div class="bg-gray-200 h-48 rounded">
-                    <img src="./src/img/icon_cake.svg" alt="">
-                </div>
-                <div class="bg-gray-200 h-48 rounded">
-                    <img src="./src/img/icon_cake.svg" alt="">
-                </div>
-                <div class="bg-gray-200 h-48 rounded">
-                    <img src="./src/img/icon_cake.svg" alt="">
-                </div>
-            </div>
+            <img src="./src/img/1.png" alt="story1">
+            <img src="./src/img/2.png" alt="story2">
         </div>
     </section>
 
