--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <!-- Section 5: Wish Candle n Flower -->
     <section class="flex items-center justify-center min-h-screen bg-pink-300 font-sans">
         <h1 class="font-bold text-8xl">LILIN PINDAH KE PAGE LAIN</h1>
+        <button href="/page2.html" target="_blank">KLIK!!!</button>
     </section>
 
     <!-- Section 6: Thanks n Contact -->
