--- a/index.html
+++ b/index.html
@@ -108,11 +108,10 @@
     <!-- Section 5: Wish Candle n Flower -->
     <section class="flex items-center justify-center min-h-screen bg-pink-300">
         <div
-            class="w-full bg-transparant backdrop-blur-lg p-20 rounded-2xl shadow-xl flex justify-start items-center space-x-4 max-w-2xl">
-            <!-- Image Section -->
-            <div class="flex-shrink-0">
-                <img src="/src/img/timecount.JPG" alt="Cute Cat"
-                    class="w-80 h-45 rounded-lg object-cover border-2 border-gray-300">
+            class="bg-white/70 backdrop-blur-lg max-w-6xl mx-auto flex flex-col lg:flex-row items-center space-y-8 lg:space-y-0 lg:space-x-12 p-6 lg:p-12 rounded-xl shadow-xl border-2 bg-white">
+            <div class="w-full lg:w-1/2 flex justify-center items-center">
+                <img src="/src/img/timecount.JPG" alt="Foto Adek"
+                    class="rounded-xl shadow-lg max-w-sm md:max-w-md lg:max-w-lg border-4">
             </div>
             <!-- Passcode Section -->
             <div class="w-full">
@@ -120,29 +119,29 @@
                     class="w-full p-4 mb-4 text-center text-xl font-medium border border-gray-300 rounded-lg bg-transparent focus:outline-none focus:ring-2 focus:ring-blue-400">
                 <!-- Keypad -->
                 <div class="grid grid-cols-3 gap-4">
-                    <button class="bg-blue-500 text-white text-lg px-8 py-8 rounded-lg hover:bg-blue-600"
+                    <button class="text-black border-black text-2xl px-8 py-8 rounded-lg hover:bg-gray-600"
                         onclick="pressKey(1)">1</button>
-                    <button class="bg-blue-500 text-white text-lg px-8 py-8 rounded-lg hover:bg-blue-600"
+                    <button class="text-black border-black text-2xl px-8 py-8 rounded-lg hover:bg-gray-600"
                         onclick="pressKey(2)">2</button>
-                    <button class="bg-blue-500 text-white text-lg px-8 py-8 rounded-lg hover:bg-blue-600"
+                    <button class="text-black border-black text-2xl px-8 py-8 rounded-lg hover:bg-gray-600"
                         onclick="pressKey(3)">3</button>
-                    <button class="bg-blue-500 text-white text-lg px-8 py-8 rounded-lg hover:bg-blue-600"
+                    <button class="text-black border-black text-2xl px-8 py-8 rounded-lg hover:bg-gray-600"
                         onclick="pressKey(4)">4</button>
-                    <button class="bg-blue-500 text-white text-lg px-8 py-8 rounded-lg hover:bg-blue-600"
+                    <button class="text-black border-black text-2xl px-8 py-8 rounded-lg hover:bg-gray-600"
                         onclick="pressKey(5)">5</button>
-                    <button class="bg-blue-500 text-white text-lg px-8 py-8 rounded-lg hover:bg-blue-600"
+                    <button class="text-black border-black text-2xl px-8 py-8 rounded-lg hover:bg-gray-600"
                         onclick="pressKey(6)">6</button>
-                    <button class="bg-blue-500 text-white text-lg px-8 py-8 rounded-lg hover:bg-blue-600"
+                    <button class="text-black border-black text-2xl px-8 py-8 rounded-lg hover:bg-gray-600"
                         onclick="pressKey(7)">7</button>
-                    <button class="bg-blue-500 text-white text-lg px-8 py-8 rounded-lg hover:bg-blue-600"
+                    <button class="text-black border-black text-2xl px-8 py-8 rounded-lg hover:bg-gray-600"
                         onclick="pressKey(8)">8</button>
-                    <button class="bg-blue-500 text-white text-lg px-8 py-8 rounded-lg hover:bg-blue-600"
+                    <button class="text-black border-black text-2xl px-8 py-8 rounded-lg hover:bg-gray-600"
                         onclick="pressKey(9)">9</button>
-                    <button class="bg-red-500 text-white text-lg px-8 py-8 rounded-lg hover:bg-red-600"
+                    <button class="text-black border-black text-2xl px-8 py-8 rounded-lg hover:bg-gray-600"
                         onclick="clearPasscode()">C</button>
-                    <button class="bg-blue-500 text-white text-lg px-8 py-8 rounded-lg hover:bg-blue-600"
+                    <button class="text-black border-black text-2xl px-8 py-8 rounded-lg hover:bg-gray-600"
                         onclick="pressKey(0)">0</button>
-                    <button class="bg-green-500 text-white text-lg px-8 py-8 rounded-lg hover:bg-green-600"
+                    <button class="text-black border-black text-2xl px-8 py-8 rounded-lg hover:bg-gray-600"
                         onclick="submitPasscode()">OK</button>
                 </div>
             </div>
